test/js/bun/util/__snapshots__/inspect-error.test.js.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`error.cause 1`] = `
"1 | import { test, expect } from "bun:test";
2 | 
3 | test("error.cause", () => {
4 |   const err = new Error("error 1");
5 |   const err2 = new Error("error 2", { cause: err });
                   ^
error: error 2
      at [dir]/inspect-error.test.js:5:16

1 | import { test, expect } from "bun:test";
2 | 
3 | test("error.cause", () => {
4 |   const err = new Error("error 1");
                  ^
error: error 1
      at [dir]/inspect-error.test.js:4:15
"
`;

exports[`Error 1`] = `
" 9 |       .replaceAll("//", "/"),
10 |   ).toMatchSnapshot();
11 | });
12 | 
13 | test("Error", () => {
14 |   const err = new Error("my message");
                   ^
error: my message
      at [dir]/inspect-error.test.js:14:15
"
`;

exports[`BuildMessage 1`] = `
"2 | const duplicateConstDecl = 456;
          ^
error: "duplicateConstDecl" has already been declared
    at [dir]/inspect-error-fixture-bad.js:2:7

1 | const duplicateConstDecl = 123;
          ^
note: "duplicateConstDecl" was originally declared here
   at [dir]/inspect-error-fixture-bad.js:1:7"
`;

exports[`Error inside minified file (no color)  1`] = `
"21 | exports.__SECRET_INTERNALS_DO_NOT_USE_OR_YOU_WILL_BE_FIRED=Z;
22 | exports.cache=function(a){return function(){var b=U.current;if(!b)return a.apply(null,arguments);var c=b.getCacheForType(V);b=c.get(a);void 0===b&&(b=W(),c.set(a,b));c=0;for(var f=arguments.length;c<f;c++){var d=arguments[c];if("function"===typeof d||"object"===typeof d&&null!==d){var e=b.o;null===e&&(b.o=e=new WeakMap);b=e.get(d);void 0===b&&(b=W(),e.set(d,b))}else e=b.p,null===e&&(b.p=e=new Map),b=e.get(d),void 0===b&&(b=W(),e.set(d,b))}if(1===b.s)return b.v;if(2===b.s)throw b.v;try{var g=a.apply(null,
23 | arguments);c=b;c.s=1;return c.v=g}catch(h){throw g=b,g.s=2,g.v=h,h;}}};
24 | exports.cloneElement=function(a,b,c){if(null===a||void 0===a)throw Error("React.cloneElement(...): The argument must be a React element, but you passed "+a+".");var f=C({},a.props),d=a.key,e=a.ref,g=a._owner;if(null!=b){void 0!==b.ref&&(e=b.ref,g=K.current);void 0!==b.key&&(d=""+b.key);if(a.type&&a.type.defaultProps)var h=a.type.defaultProps;for(k in b)J.call(b,k)&&!L.hasOwnProperty(k)&&(f[k]=void 0===b[k]&&void 0!==h?h[k]:b[k])}var k=arguments.length-2;if(1===k)f.children=c;else if(1<k){h=Array(k);
25 | for(var m=0;m<k;m++)h[m]=arguments[m+2];f.children=h}return{$$typeof:l,type:a.type,key:d,ref:e,props:f,_owner:g}};exports.createContext=function(a){a={$$typeof:u,_currentValue:a,_currentValue2:a,_threadCount:0,Provider:null,Consumer:null,_defaultValue:null,_globalName:null};a.Provider={$$typeof:t,_context:a};return a.Consumer=a};exports.createElement=M;exports.createFactory=function(a){var b=M.bind(null,a);b.type=a;return b};exports.createRef=function(){return{current:null}};
26 | exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};exports.forwardRef=function(a){return{$$typeof:v,render:a}};expo

error: error inside long minified file!
      at [dir]/inspect-error-fixture.min.js:26:2846
      at [dir]/inspect-error-fixture.min.js:26:2890
      at require (:1:21)
      at [dir]/inspect-error.test.js:37:5
"
`;

exports[`Error inside minified file (color)  1`] = `
"[0m[1m21 |[0m exports.__SECRET_INTERNALS_DO_NOT_USE_OR_YOU_WILL_BE_FIRED=Z[0m[2m;[0m
[0m[1m22 |[0m exports.cache=[0m[35mfunction[0m(a){[0m[35mreturn[0m [0m[35mfunction[0m(){[0m[35mvar[0m b=U.current[0m[2m;[0m[0m[35mif[0m(!b)[0m[35mreturn[0m a[0m[3m[1m.apply[0m([0m[33mnull[0m,arguments)[0m[2m;[0m[0m[35mvar[0m c=b[0m[3m[1m.getCacheForType[0m(V)[0m[2m;[0mb=c[0m[3m[1m.get[0m(a)[0m[2m;[0m[0m[35mvoid[0m [0m[33m0[0m===b&&(b=W(),c[0m[3m[1m.set[0m(a,b))[0m[2m;[0mc=[0m[33m0[0m[0m[2m;[0m[0m[35mfor[0m([0m[35mvar[0m f=arguments.length[0m[2m;[0mc[0m<[0mf[0m[2m;[0mc++){[0m[35mvar[0m d=arguments[c][0m[2m;[0m[0m[35mif[0m([0m[32m"function"[0m===[0m[35mtypeof[0m d||[0m[32m"object"[0m===[0m[35mtypeof[0m d&&[0m[33mnull[0m!==d){[0m[35mvar[0m e=b.o[0m[2m;[0m[0m[33mnull[0m===e&&(b.o=e=[0m[35mnew[0m WeakMap)[0m[2m;[0mb=e[0m[3m[1m.get[0m(d)[0m[2m;[0m[0m[35mvoid[0m [0m[33m0[0m===b&&(b=W(),e[0m[3m[1m.set[0m(d,b))}[0m[35melse[0m e=b.p,[0m[33mnull[0m===e&&(b.p=e=[0m[35mnew[0m Map),b=e[0m[3m[1m.get[0m(d),[0m[35mvoid[0m [0m[33m0[0m===b&&(b=W(),e[0m[3m[1m.set[0m(d,b))}[0m[35mif[0m([0m[33m1[0m===b.s)[0m[35mreturn[0m b.v[0m[2m;[0m[0m[35mif[0m([0m[33m2[0m===b.s)[0m[35mthrow[0m b.v[0m[2m;[0m[0m[35mtry[0m{[0m[35mvar[0m g=a[0m[3m[1m.apply[0m([0m[33mnull[0m,
[0m[1m23 |[0m arguments)[0m[2m;[0mc=b[0m[2m;[0mc.s=[0m[33m1[0m[0m[2m;[0m[0m[35mreturn[0m c.v=g}[0m[35mcatch[0m(h){[0m[35mthrow[0m g=b,g.s=[0m[33m2[0m,g.v=h,h[0m[2m;[0m}}}[0m[2m;[0m
[0m[1m24 |[0m exports.cloneElement=[0m[35mfunction[0m(a,b,c){[0m[35mif[0m([0m[33mnull[0m===a||[0m[35mvoid[0m [0m[33m0[0m===a)[0m[35mthrow[0m Error([0m[32m"React.cloneElement(...): The argument must be a React element, but you passed "[0m+a+[0m[32m"."[0m)[0m[2m;[0m[0m[35mvar[0m f=C({},a.props),d=a.key,e=a.ref,g=a._owner[0m[2m;[0m[0m[35mif[0m([0m[33mnull[0m!=b){[0m[35mvoid[0m [0m[33m0[0m!==b.ref&&(e=b.ref,g=K.current)[0m[2m;[0m[0m[35mvoid[0m [0m[33m0[0m!==b.key&&(d=[0m[32m"[0m[0m[32m"+b.key);if(a.type&&a.type.defaultProps)var h=a.type.defaultProps;for(k in b)J.call(b,k)&&!L.hasOwnProperty(k)&&(f[k]=void 0===b[k]&&void 0!==h?h[k]:b[k])}var k=arguments.length-2;if(1===k)f.children=c;else if(1<k){h=Array(k);[0m
[0m[1m25 |[0m [0m[35mfor[0m([0m[35mvar[0m m=[0m[33m0[0m[0m[2m;[0mm[0m<[0mk[0m[2m;[0mm++)h[m]=arguments[m+[0m[33m2[0m][0m[2m;[0mf.children=h}[0m[35mreturn[0m{$$typeof:l,[0m[34mtype[0m:[0m[1m[34ma[0m.[0m[34mtype[0m,[0m[1m[34mkey[0m:d,ref:e,props:f,_owner:g}}[0m[2m;[0mexports.createContext=[0m[35mfunction[0m(a){a={$$typeof:u,_currentValue:a,_currentValue2:a,_threadCount:[0m[33m0[0m,Provider:[0m[33mnull[0m,Consumer:[0m[33mnull[0m,_defaultValue:[0m[33mnull[0m,_globalName:[0m[33mnull[0m}[0m[2m;[0ma.Provider={$$typeof:t,_context:a}[0m[2m;[0m[0m[35mreturn[0m a.Consumer=a}[0m[2m;[0mexports.createElement=M[0m[2m;[0mexports.createFactory=[0m[35mfunction[0m(a){[0m[35mvar[0m b=M[0m[3m[1m.bind[0m([0m[33mnull[0m,a)[0m[2m;[0mb.[0m[34mtype[0m=[0m[1m[34ma[0m[0m[2m;[0m[0m[35mreturn[0m b}[0m[2m;[0mexports.createRef=[0m[35mfunction[0m(){[0m[35mreturn[0m{current:[0m[33mnull[0m}}[0m[2m;[0m
[0m[1m26 |[0m exports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexports.forwardRef=[0m[35mfunction[0m(a){[0m[35mreturn[0m{$$typeof:v,render:a}}[0m[2m;[0mexpo[0m[2m | ... truncated [0m

[0m[31merror[0m[2m:[0m [1merror inside long minified file![0m
[0m      [2mat [0m[0m[36m[dir]/inspect-error-fixture.min.js[0m[2m:[0m[33m26[0m[2m:[33m2846[0m
[0m      [2mat [0m[0m[36m[dir]/inspect-error-fixture.min.js[0m[2m:[0m[33m26[0m[2m:[33m2890[0m
[0m      [2mat [0m[0m[1m[3mrequire[0m[2m ([0m[0m[36m[0m[2m:[0m[33m1[0m[2m:[33m21[0m[2m)[0m
[0m      [2mat [0m[0m[36m[dir]/inspect-error.test.js[0m[2m:[0m[33m50[0m[2m:[33m5[0m
"
`;
